yaml/deploy/hadoop/hue/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue-nginx
  namespace: hadoop
spec:
  selector:
    matchLabels:
      app: hue-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: hue-nginx
    spec:
      containers:
      - name: hue-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf-hue
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf-hue
        configMap:
          name: nginx-conf-hue
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: hue-service
  namespace: hadoop
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: hue-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hadoop
  name: hue-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
   - hosts:
      - hue.congcu24h.com #domain
     secretName:  test-domain-tls
  rules:
  - host: hue.congcu24h.com #domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hue-service
            port:
              number: 8080
